[gd_scene load_steps=2 format=3 uid="uid://c87awud50pyyx"]

[ext_resource type="Script" uid="uid://v6iv7qw2metm" path="res://Menus/options_menu.gd" id="1_mwbba"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwbba")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FullscreenCheckbox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
